Fix responsive layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+input[type='text'],
+select,
+textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
 a:link {
   color: #000;
 }
